# cvp

./: .clangd  .gitignore  CMakeLists.txt  ConsoleVideoPlayer.sln  Makefile  README.md  cvp  vcpkg.json
CVPPaletteMaker/: MainWindow.Designer.cs  Program.cs
ConsoleVideoPlayer/: Renderer.cs  Win32.cs
ConsoleVideoPlayer/Properties/: launchSettings.json
cpp/: audio.cpp  audio.h  colors.h  decoder.cpp  decoder.h  input.cpp  input.h  main.cpp  renderer.cpp  renderer.h  ui.cpp
old/: ConsoleVideoPlayer.sln
old/CVP/: CVP.vcxproj  CVP.vcxproj.filters  main.cpp  renderer.hpp
old/CVPPaletteMaker/: MainWindow.cs
old/ConsoleVideoPlayer/: Compression.cs  ConsoleVideoPlayer.csproj  Program.cs  VideoPlayer.cs  Win32.cs
old_src/: audio.h  cvp.cpp  decoder.cpp  main.h  renderer.cpp  ui.cpp  ui.h
src/: Makefile  audio.c  audio.cpp  audio.h  avdecoder.cpp  avdecoder.h  colors.cpp  colors.h  config.cpp  config.h  console.cpp  console.h  cvp.cpp  cvp.h  debugrenderer.cpp  debugrenderer.h  decoder.c  decoder.cpp  decoder.h  main.c  main.cpp  parser.h  renderer.c  renderer.cpp  renderer.h  settings.cpp  settings.h  timer.h  ui.c  ui.cpp  ui.h  utils.c  utils.h
src/CVP/: Makefile  renderer.cpp
src/CVPPaletteMaker/: MainWindow.resx
src/ConsoleVideoPlayer/: NativeInput.cs  Program.cs  Renderer.cs
src/ConsoleVideoPlayer/Properties/: launchSettings.json
